# dnscheck

./: .gitignore  .nowignore  README.md  cors.py  error.html  form.html  index.py  layout.html  now.json  now.json.sh  pyproject.toml  requirements.txt  results.html  utils.py
.circleci/: config.yml
tests/: test_index.py
tests/test_utils/: test_get_authoritative_nameserver.py  test_validate_domain.py
